force-app/main/default/objects/MD_Plan__c/MD_Plan__c.object-meta.xml
<CustomObject>
    <label>Visit Planning</label>
    <nameField>
        <label>Plan Name (e.g Week 1_OCT_25 )</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Planning</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>