force-app/main/default/objects/MD_Plan__c/fields/End_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Calculated__c</fullName>
    <formula>IF(

     RecordType.DeveloperName = &apos;Weekly_Plan&apos;,

     Plan_Start_Date__c  + 6, 

    IF(

        RecordType.DeveloperName  = &apos;Monthly_Plan&apos;,

        ADDMONTHS(Plan_Start_Date__c,1) - 1,

        NULL

    )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>