force-app/main/default/objects/MD_Plan__c/fields/Seleck_Week__c.field-meta.xml
<CustomField>
    <fullName>Seleck_Week__c</fullName>
    <label>Select Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25-Week-01</fullName>
            </value>
            <value>
                <fullName>25-Week-02</fullName>
            </value>
            <value>
                <fullName>25-Week-03</fullName>
            </value>
            <value>
                <fullName>25-Week-04</fullName>
            </value>
            <value>
                <fullName>25-Week-05</fullName>
            </value>
            <value>
                <fullName>25-Week-06</fullName>
            </value>
            <value>
                <fullName>25-Week-07</fullName>
            </value>
            <value>
                <fullName>25-Week-08</fullName>
            </value>
            <value>
                <fullName>25-Week-09</fullName>
            </value>
            <value>
                <fullName>25-Week-10</fullName>
            </value>
            <value>
                <fullName>25-Week-11</fullName>
            </value>
            <value>
                <fullName>25-Week-12</fullName>
            </value>
            <value>
                <fullName>25-Week-13</fullName>
            </value>
            <value>
                <fullName>25-Week-14</fullName>
            </value>
            <value>
                <fullName>25-Week-15</fullName>
            </value>
            <value>
                <fullName>25-Week-16</fullName>
            </value>
            <value>
                <fullName>25-Week-17</fullName>
            </value>
            <value>
                <fullName>25-Week-18</fullName>
            </value>
            <value>
                <fullName>25-Week-19</fullName>
            </value>
            <value>
                <fullName>25-Week-20</fullName>
            </value>
            <value>
                <fullName>25-Week-21</fullName>
            </value>
            <value>
                <fullName>25-Week-22</fullName>
            </value>
            <value>
                <fullName>25-Week-23</fullName>
            </value>
            <value>
                <fullName>25-Week-24</fullName>
            </value>
            <value>
                <fullName>25-Week-25</fullName>
            </value>
            <value>
                <fullName>25-Week-26</fullName>
            </value>
            <value>
                <fullName>25-Week-27</fullName>
            </value>
            <value>
                <fullName>25-Week-28</fullName>
            </value>
            <value>
                <fullName>25-Week-29</fullName>
            </value>
            <value>
                <fullName>25-Week-30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>