force-app/main/default/objects/MD_Plan__c/recordTypes/Monthly_Plan.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Plan</fullName>
    <active>true</active>
    <label>Monthly Plan</label>
</RecordType>