force-app/main/default/objects/MD_Plan__c/recordTypes/Weekly_Plan.recordType-meta.xml
<RecordType>
    <fullName>Weekly_Plan</fullName>
    <active>true</active>
    <label>Weekly Plan</label>
</RecordType>