force-app/main/default/objects/MD_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plan_Start_Date__c</columns>
    <columns>End_Date_Calculated__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>